<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">NotePad</string>
    <string name="live_folder_name">Notes</string>

    <string name="title_edit_title">Note title:</string>
    <string name="title_create">New note</string>
    <string name="title_edit">Edit: %1$s</string>
    <string name="title_notes_list">Notes</string>

    <string name="menu_add">New note</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open">Open</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>

    <string name="button_ok">OK</string>
    <string name="text_title">Title:</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">Edit title</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>

    <string name="background">Theme</string>

    <string name="settings_title">Settings</string>
    <string name="general_settings">通用设置</string>
    <string name="night_mode_title">夜间模式</string>
    <string name="night_mode_summary">开启后将使用夜间模式</string>
    <string name="notifications_title">推送通知</string>
    <string name="notifications_summary">开启后接收应用通知</string>

    <string name="menu_sort">Sort</string>
    <string name="menu_sort1">创建时间</string>
    <string name="menu_sort2">修改时间</string>

    <string name="menu_output">导出</string>
    <string name="output_name">导出name</string>
    <string name="output_ok">导出成功</string>

</resources>