<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--  This is our one standard application action (creating a new note). -->
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_menu_compose"
        android:title="@string/menu_add"
        android:alphabeticShortcut='a'
        app:showAsAction="always" />
    <!--  If there is currently data in the clipboard, this adds a PASTE menu item to the menu
          so that the user can paste in the data.. -->
    <item
        android:id="@+id/menu_paste"
        android:icon="@drawable/ic_menu_compose"
        android:title="@string/menu_paste"
        android:alphabeticShortcut='p' />
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/bg_change"
        android:title="@string/background" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort"
        android:title="@string/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_sort1"
                android:title="@string/menu_sort1"/>
            <item
                android:id="@+id/menu_sort2"
                android:title="@string/menu_sort2"/>

        </menu>
    </item>

</menu>